# moveit_grasping_testing

./: .project  .rosinstall  CMakeLists.txt  README.md  frames.gv  moveit_pose_goal_notes.txt  package.xml  part_object.txt.scene  pickup_goal_msgs.txt  setup.py
config/: rviz_teleop.rviz  tiago_moveit_simple_grasps.yaml
devel_files/: as_goal.txt  rc_goal.txt
launch/: hand_open_close.launch  hydra_and_tf.launch  launch_hands_head_base_arms.launch  move_arms_moveit.launch  move_base_razer.launch  moveit_simple_grasps.launch  oculus_head_tracker.launch  oculus_pose_publisher.launch  rviz.launch  simulation_setup.launch
scripts/: depth_throtle_server.py  hand_closer.py  oculus_tf_to_pose.py  pick_a_cluster.py  pick_and_place.py  pick_as_moveit.py  pick_object.py  place_object.py  tf_pose_extractor.py  topic_listener_and_resender.py  topic_receiver_and_executer.py  topic_resender_from_memory_file.py
scripts/older_tests/: button_pyside.py  head_control_oculus.py  left_arm_mover.py  move_base.py  pose_goal_moveit.py  topic_listener_to_memory_file.py
src/moveit_grasping_testing/: add_part_object.py  grasp.yaml  move_up_both_arms_grasplike.py  move_up_ekp.py  pick_a_cluster.py  pick_and_place.py  pick_as_moveit.py  pick_as_moveit_works_no_grasps.py  pick_object.py  place_object.py  remove_objects_world.py  right_to_left_cartesian.py  spherical_grasps_server.py  straight_up_right_arm.py  test_grasping_generation.py  test_grasping_generation_marco.py  tutorial_example.py
src/moveit_grasping_testing/older_tests/: cartesian_path.py  head_control_oculus.py  show_mesh.py  (+6 more)
(+8 files in other folders)
